.provarCaches/00D410000011HE0EAM/objects/rstk__upusage__c.object
<CustomObject>
    <description>upusage__c</description>
    <fields>
        <fullName>rstk__upusage_buyer__c</fullName>
        <label>Buyer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_createdby__c</fullName>
        <label>Created By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_createdbysys__c</fullName>
        <label>Created By System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_createddate__c</fullName>
        <label>Created Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_desc__c</fullName>
        <label>Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_division__c</fullName>
        <label>Division</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_impact__c</fullName>
        <label>Impact To OH Qty</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_item__c</fullName>
        <label>Item ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_qty__c</fullName>
        <label>Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_stockroom__c</fullName>
        <label>Stockroom</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_tranid__c</fullName>
        <label>Trans ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_tranln__c</fullName>
        <label>Trans Ln</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_txnby__c</fullName>
        <label>Transaction By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_txndate__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_txntyp__c</fullName>
        <label>Transaction</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__upusage_uom__c</fullName>
        <label>UOM</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Uploaded Item Usage</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Uploaded Item Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>